--- a/style.css
+++ b/style.css
@@ -1,38 +1,37 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background: linear-gradient(to right, #360036,#265866);
+body{
+    background: linear-gradient(to right, #360033, #0b8793);
     font-family: sans-serif;
 }
- 
 
-header h1 {
-    color:#fff;
+header h1{
+    color: #fff;
     margin: 5rem 0;
     font-size: 3rem;
 }
 
 header,
-form {
+form{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-form {
+form{
     position: relative;
 }
 
-form .search {
+form .search{
     display: flex;
 }
 
 form button,
-form input {
+form input{
     padding: 0.5rem;
     font-size: 2rem;
     border: none;
@@ -40,40 +39,38 @@ form input {
     outline: none;
 }
 
-form button {
+form button{
     color: #fff;
     background-color: #340436;
     cursor: pointer;
-   transition: all 0.3s ease;
-
+    transition: all 0.3s ease;
 }
 
-form button:hover {
+form button:hover{
     background-color: #fff;
     color: #340436;
 }
 
-.select {
+.select{
     position: relative;
     margin: 1rem;
     overflow: hidden;
 }
-select {
-    -webkit-appearance:none;
+
+select{
+    -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     outline: none;
-    border:none;
+    border: none;
+
     width: 10rem;
     padding: 1rem;
     cursor: pointer;
     color: #340436;
-
-
 }
 
-
-.select:after {
+.select:after{
     content: "\25BC";
     position: absolute;
     background-color: #340436;
@@ -83,28 +80,26 @@ select {
     padding: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
+    pointer-events: none;
 }
 
-.select:hover {
+.select:hover:after{
     background-color: #fff;
     color: #340436;
-
 }
 
-
-.todo-container {
+.todo-container{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.todo-list {
+.todo-list{
     min-width: 30%;
     list-style: none;
 }
 
-
-.todo {
+.todo{
     margin: 0.5rem;
     background-color: #fff;
     color: #000;
@@ -112,19 +107,17 @@ select {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    transition: .5s all ease;
 }
 
-.todo li {
+.todo li{
     width: 100%;
     padding: 0 0.5rem;
-
 }
 
-
 .complete-btn,
-.trash-btn {
-    background-color: #960303;
+.trash-btn{
+    background: #960303;
     color: #fff;
     border: none;
     padding: 1rem;
@@ -132,40 +125,49 @@ select {
     font-size: 1rem;
 }
 
-.complete-btn {
+.complete-btn{
     background-color: #0b8793;
-
 }
+
 
 .fa-check-circle,
-.fa-minus-circle {
+.fa-minus-circle{
     font-size: 1.5rem;
+    pointer-events: none;
 }
 
-
-/* !Alert css*****/
-
-
-
-.alert-wrapper {
+/*! alert css */
+.alert-wrapper{
     position: absolute;
     bottom: 10%;
     right: 0;
 }
 
-.alert-warning,
-.alert-success {
+.alert-success,
+.alert-warning{
     padding: 1rem;
     color: #fff;
     font-weight: bold;
     width: 25rem;
     text-align: center;
+    display: none;
 }
 
-.alert-warning {
+.alert-warning{
     background-color: #dc3545;
 }
 
-.alert-success {
+.alert-success{
     background-color: #5ebe92;
+}
+
+
+.fall{
+    transform: translateY(8rem) rotateZ(360deg);
+    opacity: 0;
+}
+
+.completed{
+    opacity: 0.5;
+    text-decoration: line-through;
 }
